k8s/service.yaml
 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qotd
  name: qotd
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: qotd
  sessionAffinity: None
  type: ClusterIP
