k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: qotd
  name: qotd
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: qotd
    weight: 100
